versions/v4.0.0/build/dts/api/bindings/mtd/atmel,at45.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/mtd/atmel,at45.html
original_path: build/dts/api/bindings/mtd/atmel,at45.html
---

# atmel,at45 (on spi bus)

Vendor: [Atmel Corporation](../../bindings.md#dt-vendor-atmel)

Note

An implementation of a driver matching this compatible is available in
[drivers/flash/spi\_flash\_at45.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/flash/spi_flash_at45.c).

## Description

```text
Atmel AT45 (or compatible) SPI flash
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `jedec-id` | `uint8-array` | ```text JEDEC ID as manufacturer ID (1 byte) and device ID (2 bytes). ```  This property is **required**. |
| `size` | `int` | ```text Flash capacity in bits. ```  This property is **required**. |
| `sector-size` | `int` | ```text Flash sector size in bytes. ```  This property is **required**. |
| `sector-0a-pages` | `int` | ```text Most available AT45 flash chips have their first two sectors shorter than the consecutive ones. Usually, the first sector is marked as 0a and has its size equal to eight pages (one block) and the second one (usually 0b) is the complement to the size of a regular sector. This property allows specifying the size (in pages) of that first sector and defaults to the commonly used value of eight pages. Value of zero means that the flash chip has all sectors of equal size. ```  Default value: `8` |
| `block-size` | `int` | ```text Flash block size in bytes. ```  This property is **required**. |
| `page-size` | `int` | ```text Flash page size in bytes. ```  This property is **required**. |
| `no-chip-erase` | `boolean` | ```text If set, indicates that the chip does not support the chip erase command. ``` |
| `no-sector-erase` | `boolean` | ```text If set, indicates that the chip does not support the sector erase command. ``` |
| `use-udpd` | `boolean` | ```text When set, the driver will use the Ultra-Deep Power-Down command instead of the default Deep Power-Down one to put the chip into low power mode.  From the driver perspective, as it does not rely on the contents of the SRAM buffers in the chip, the difference between the Deep and Ultra-Deep Power-Down modes is that the chip consumes far less power in the latter but needs some more time to enter this mode and to exit from it. ``` |
| `enter-dpd-delay` | `int` | ```text Time, in nanoseconds, needed by the chip to enter the Deep Power-Down mode (or Ultra-Deep Power-Down mode when the "use-udpd" property is set) after the corresponding command is issued. ``` |
| `exit-dpd-delay` | `int` | ```text Time, in nanoseconds, needed by the chip to exit from the Deep Power-Down mode (or Ultra-Deep Power-Down mode when the "use-udpd" property is set) after the corresponding command is issued. ``` |
| `reset-gpios` | `phandle-array` | ```text The RESET pin of AT45 is active low. If connected directly the MCU pin should be configured as active low. ``` |
| `wp-gpios` | `phandle-array` | ```text The WP pin of AT45 is active low. If connected directly the MCU pin should be configured as active low. ``` |
| `spi-max-frequency` | `int` | ```text Maximum clock frequency of device's SPI interface in Hz ```  This property is **required**. |
| `duplex` | `int` | ```text Duplex mode, full or half. By default it's always full duplex thus 0 as this is, by far, the most common mode. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0    SPI_FULL_DUPLEX   2048 SPI_HALF_DUPLEX ```  Legal values: `0`, `2048` |
| `frame-format` | `int` | ```text Motorola or TI frame format. By default it's always Motorola's, thus 0 as this is, by far, the most common format. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0     SPI_FRAME_FORMAT_MOTOROLA   32768 SPI_FRAME_FORMAT_TI ```  Legal values: `0`, `32768` |
| `spi-cpol` | `boolean` | ```text SPI clock polarity which indicates the clock idle state. If it is used, the clock idle state is logic high; otherwise, low. ``` |
| `spi-cpha` | `boolean` | ```text SPI clock phase that indicates on which edge data is sampled. If it is used, data is sampled on the second edge; otherwise, on the first edge. ``` |
| `spi-hold-cs` | `boolean` | ```text In some cases, it is necessary for the master to manage SPI chip select under software control, so that multiple spi transactions can be performed without releasing it. A typical use case is variable length SPI packets where the first spi transaction reads the length and the second spi transaction reads length bytes. ``` |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “atmel,at45” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
